prep for dev net

--- a/.env.sample
+++ b/.env.sample
@@ -5,8 +5,8 @@
 # They correspond to the private keys to be used by the user.
 
 # RPC Endpoints used to deploy contracts
-MOVEMENT_RPC_ENDPOINT="https://devnet.m1.movementlabs.xyz"
-EVM_RPC_ENDPOINT="https://mevm.devnet.m1.movementlabs.xyz"
+MOVEMENT_RPC_ENDPOINT="https://devnet.internal.m1.movementlabs.xyz"
+EVM_RPC_ENDPOINT="https://mevm.devnet.internal.m1.movementlabs.xyz/v1"
 
 # Private keys: Addresses should be previously funded from https://faucet.movementlabs.xyz
 # Move address private key
