--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@safe-global/protocol-kit": "^1.3.0",
     "@safe-global/safe-core-sdk-types": "^3.0.1",
     "aptos": "^1.20.0",
+    "bignumber.js": "^9.1.2",
     "dotenv": "^16.3.1",
     "ethers": "^5.7.2"
   }
