--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,6 +11,10 @@ env:
 
 jobs:
   build:
+   cargo build --verbose
+  shell: /usr/bin/bash -e {0}
+  env:
+    CARGO_TERM_COLOR: always
 
     runs-on: ubuntu-latest
 
