--- a/.github/workflows/alibabacloud.yml
+++ b/.github/workflows/alibabacloud.yml
@@ -63,6 +63,23 @@ jobs:
     - name: Build and push image to ACR
       run: |
         docker build --tag "$REGISTRY/$NAMESPACE/$IMAGE:$TAG" .
+  docker push "$REGISTRY/$NAMESPACE/$IMAGE:$TAG"
+  shell: /usr/bin/bash -e {0}
+  env:
+    REGION_ID: cn-hangzhou
+    REGISTRY: registry.cn-hangzhou.aliyuncs.com
+    NAMESPACE: namespace
+    IMAGE: repo
+    TAG: d1cca2afa2e77bcb218e9aadb0a1291291f0eba7
+    ACK_CLUSTER_ID: clusterID
+    ACK_DEPLOYMENT_NAME: nginx-deployment
+    ACR_EE_REGISTRY: myregistry.cn-hangzhou.cr.aliyuncs.com
+    ACR_EE_INSTANCE_ID: instanceID
+    ACR_EE_NAMESPACE: namespace
+    ACR_EE_IMAGE: repo
+    ACR_EE_TAG: d1cca2afa2e77bcb218e9aadb0a1291291f0eba7
+    DOCKER_CONFIG: /home/runner/work/_temp/docker_login_1719057430595
+        docker build --tag "$REGISTRY/$NAMESPACE/$IMAGE:$TAG" .
         docker push "$REGISTRY/$NAMESPACE/$IMAGE:$TAG"
 
     # 1.3 Scan image in ACR
