--- a/package.json
+++ b/package.json
@@ -1,20 +1,42 @@
 {
-  "name": "evm-to-move-demo",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "@google-github-actions/auth",
+  "version": "2.1.3",
+  "description": "Authenticate to Google Cloud using OIDC tokens or JSON service account keys.",
+  "main": "dist/main/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "ncc build -m src/main.ts -o dist/main && ncc build -m src/post.ts -o dist/post",
+    "lint": "eslint . --ext .ts,.tsx",
+    "format": "prettier --write **/*.ts",
+    "test": "bash ./bin/runTests.sh"
   },
-  "author": "",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/google-github-actions/auth"
+  },
+  "keywords": [
+    "actions",
+    "google cloud",
+    "identity",
+    "auth",
+    "oidc"
+  ],
+  "author": "GoogleCloudPlatform",
+  "license": "Apache-2.0",
   "dependencies": {
-    "@safe-global/api-kit": "^2.0.0",
-    "@safe-global/protocol-kit": "^1.3.0",
-    "@safe-global/safe-core-sdk-types": "^3.0.1",
-    "aptos": "^1.20.0",
-    "bignumber.js": "^9.1.2",
-    "dotenv": "^16.3.1",
-    "ethers": "^5.7.2"
+    "@actions/core": "^1.10.1",
+    "@actions/http-client": "^2.2.1",
+    "@google-github-actions/actions-utils": "^0.7.4"
+  },
+  "devDependencies": {
+    "@types/node": "^20.12.8",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
+    "@vercel/ncc": "^0.38.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
